--- a/index.html
+++ b/index.html
@@ -1,9 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <a href="#">Web Studio</a>
+        <ul>
+          <li>
+            <a href="/Estudio">Estudio</a>
+          </li>
+          <li>
+            <a href="/Portafolio">Portafolio</a>
+          </li>
+          <li>
+            <a href="/Contactos">Contactos</a>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+525555296000">+52 55 5529 6000</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <h1>SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
+        <button type="button">Solicite nuestro servicio</button>
+      </section>
+      <section>
+        <h6>ATENCIÓN A LOS DETALLES</h6>
+        <p>
+          Nos adentramos en todos los detalles y procesos de su negocio, para así desarrollar una
+          solución a su medida.
+        </p>
+        <h6>PUNTUALIDAD</h6>
+        <p>
+          Con nosotros, usted puede sentirse seguro y protegido. Un principio importante de la
+          empresa: respetar su tiempo y respetar los plazos acordados.
+        </p>
+        <h6>PLANIFICACIÓN</h6>
+        <p>
+          Usted podrá observar y participar en cada fase del desarrollo y aplicación de soluciones.
+        </p>
+        <h6>TEGNOLOGÍA MODERNA</h6>
+        <p>
+          Usamos herramientas innovadoras para resolver las tareas asignadas. Es hora de simplificar
+          los procesos laborales.
+        </p>
+      </section>
+      <section>
+        <h2>A qué nos dedicamos</h2>
+        <ul>
+          <li>
+            <img
+              src="./imagenes/creandocodigo1.jpg"
+              alt="escribiendo codigos"
+              width="373"
+              height="323"
+            />
+          </li>
+          <li>
+            <img
+              src="./imagenes/Celularenmano2.jpg"
+              alt="diseñandoideasparamoviles"
+              width="373"
+              height="323"
+            />
+          </li>
+          <li>
+            <img
+              src="./imagenes/Gamadecolores3.jpg"
+              alt="verificandogamadecolores"
+              width="373"
+              height="323"
+            />
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Nuestro Equipo</h2>
+        <ul>
+          <li>
+            <img
+              src="./imagenes/Rhumano1.jpg"
+              alt="Diseñador de productos Andres Cubo"
+              width="270"
+              height="260"
+            />
+            <h3>Andrés Cubo</h3>
+            <p>Diseñador de Productos</p>
+          </li>
+          <li>
+            <img
+              src="./imagenes/Rhumano2.jpg"
+              alt="Desarrolladora Frontend Carla Palacios"
+              width="270"
+              height="260"
+            />
+            <h3>Carla Palacios</h3>
+            <p>Desarrolladora Frontend</p>
+          </li>
+          <li>
+            <img
+              src="./imagenes/Rhumano3.jpg"
+              alt="Marketing Mario Dorado"
+              width="270"
+              height="260"
+            />
+            <h3>Mario Dorado</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./imagenes/Rhumano4.jpg"
+              alt="Diseñador IU Pablo Mijangos"
+              width="270"
+              height="260"
+            />
+            <h3>Pablo Mijangos</h3>
+            <p>Diseñador IU</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <a href="#">Web Studio</a>
+      <address>
+        <ul>
+          <li>
+            <a href="enlace google map" target="_blank" rel="noopener noreferrer">
+              Calz. Ticomán 500, Ciudad de México, CDMX, México</a
+            >
+          </li>
+          <li>
+            <a href="mailto:info@example.com">info@example.com</a>
+          </li>
+          <li>
+            <a href="tel:+525555296000 ">+52 55 5529 6000 </a>
+          </li>
+        </ul>
+      </address>
+    </footer>
+  </body>
 </html>
