--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
         <ul>
           <li>
             <a href="enlace google map" target="_blank" rel="noopener noreferrer">
-              Calz. Ticomán 500, Ciudad de México, CDMX, México</a
-            >
+              Calz. Ticomán 500, Ciudad de México, CDMX, México
+            </a>
           </li>
           <li>
             <a href="mailto:info@example.com">info@example.com</a>
